Закончил сайт без функционала и адаптива

--- a/index.html
+++ b/index.html
@@ -23,7 +23,42 @@
         <div class="profile__edit-button"></div>
         <div class="profile__add-button"></div>
       </section>
+      <section class="elements">
+        <div class="element">
+          <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image">
+          <p class="element__name">Карачаевск</p>
+          <div class="element__like"></div>
+        </div>
+        <div class="element">
+          <img src="./images/element/Ельбрус.jpg" class="element__image">
+          <p class="element__name">Гора Эльбрус</p>
+          <div class="element__like"></div>
+        </div>
+        <div class="element">
+          <img src="./images/element/Домбай.jpg" class="element__image">
+          <p class="element__name">Домбай</p>
+          <div class="element__like"></div>
+        </div>
+        <div class="element">
+          <img src="./images/element/Ельбрус.jpg" class="element__image">
+          <p class="element__name">Гора Эльбрус</p>
+          <div class="element__like"></div>
+        </div>
+        <div class="element">
+          <img src="./images/element/Домбай.jpg" class="element__image">
+          <p class="element__name">Домбай</p>
+          <div class="element__like"></div>
+        </div>
+        <div class="element">
+          <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image">
+          <p class="element__name">Карачаево-Чукукукуку</p>
+          <div class="element__like"></div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <p>&copy; 2020 Mesto Russia</p>
+    </footer>
   </div>
 </body>
 
