Добавил адаптив на разрешении 768px

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <img src="./images/profile/avatar.jpg" class="profile__avatar">
         <div class="profile__info">
           <p class="profile__name">Жак-Ив Кусто</p>
+          <div class="profile__edit-button"></div>
           <p class="profile__status">Исследователь океана</p>
         </div>
-        <div class="profile__edit-button"></div>
         <div class="profile__add-button"></div>
       </section>
       <section class="elements">
@@ -51,7 +51,7 @@
         </div>
         <div class="element">
           <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image">
-          <p class="element__name">Карачаево-Чукукукуку</p>
+          <p class="element__name">Карачаево-Черкесия</p>
           <div class="element__like"></div>
         </div>
       </section>
