--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p>&copy; 2020 Mesto Russia</p>
+      <p class="footer__copy">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
 </body>
