Сверстал попап без функционала

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
         </div>
         <div class="profile__add-button"></div>
       </section>
+      <section class="form">
+        <div class="form__popup">
+          <div class="form__close"></div>
+          <p class="form__title">Редактировать профиль</p>
+          <form class="form__info">
+            <input type="text" name="name" class="form__name">
+            <input type="text" name="status" class="form__status">
+            <input type="button" name="save" class="form__submit-button" value="Сохранить">
+          </form>
+        </div>
+      </section>
       <section class="elements">
         <div class="element">
           <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image">
