--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="form__popup">
           <div class="form__close"></div>
           <p class="form__title">Редактировать профиль</p>
-          <form class="form__info">
-            <input type="text" name="name" class="form__name">
-            <input type="text" name="status" class="form__status">
-            <input type="button" name="save" class="form__submit-button" value="Сохранить">
+          <form class="form__info" action="">
+            <input type="text" name="name" value="Жак-Ив Кусто" class="form__name">
+            <input type="text" name="status" value="Исследователь океана" class="form__status">
+            <input type="submit" name="save" class="form__submit-button" value="Сохранить">
           </form>
         </div>
       </section>
@@ -71,6 +71,7 @@
       <p class="footer__copy">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
