--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img src="./images/profile/avatar.jpg" class="profile__avatar">
+        <img src="./images/profile/avatar.jpg" class="profile__avatar" alt="аватарка">
         <div class="profile__info">
           <p class="profile__name">Жак-Ив Кусто</p>
           <div class="profile__edit-button"></div>
@@ -27,7 +27,7 @@
         <div class="form__popup">
           <div class="form__close"></div>
           <p class="form__title">Редактировать профиль</p>
-          <form class="form__info" action="">
+          <form class="form__info">
             <input type="text" name="name" value="Жак-Ив Кусто" class="form__name">
             <input type="text" name="status" value="Исследователь океана" class="form__status">
             <input type="submit" name="save" class="form__submit-button" value="Сохранить">
@@ -36,32 +36,32 @@
       </section>
       <section class="elements">
         <div class="element">
-          <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image">
+          <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image" alt="Фотография в профиле">
           <p class="element__name">Карачаевск</p>
           <div class="element__like"></div>
         </div>
         <div class="element">
-          <img src="./images/element/Ельбрус.jpg" class="element__image">
+          <img src="./images/element/Ельбрус.jpg" class="element__image" alt="Фотография в профиле">
           <p class="element__name">Гора Эльбрус</p>
           <div class="element__like"></div>
         </div>
         <div class="element">
-          <img src="./images/element/Домбай.jpg" class="element__image">
+          <img src="./images/element/Домбай.jpg" class="element__image" alt="Фотография в профиле">
           <p class="element__name">Домбай</p>
           <div class="element__like"></div>
         </div>
         <div class="element">
-          <img src="./images/element/Ельбрус.jpg" class="element__image">
+          <img src="./images/element/Ельбрус.jpg" class="element__image" alt="Фотография в профиле">
           <p class="element__name">Гора Эльбрус</p>
           <div class="element__like"></div>
         </div>
         <div class="element">
-          <img src="./images/element/Домбай.jpg" class="element__image">
+          <img src="./images/element/Домбай.jpg" class="element__image" alt="Фотография в профиле">
           <p class="element__name">Домбай</p>
           <div class="element__like"></div>
         </div>
         <div class="element">
-          <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image">
+          <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image" alt="Фотография в профиле">
           <p class="element__name">Карачаево-Черкесия</p>
           <div class="element__like"></div>
         </div>
