--- a/index.html
+++ b/index.html
@@ -36,34 +36,48 @@
       </section>
       <section class="elements">
         <div class="element">
-          <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image" alt="Фотография в профиле">
-          <p class="element__name">Карачаевск</p>
-          <div class="element__like"></div>
+          <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image"
+            alt="Фотография в профиле">
+          <div class="element__group">
+            <p class="element__name">Карачаевск</p>
+            <div class="element__like"></div>
+          </div>
         </div>
         <div class="element">
           <img src="./images/element/Ельбрус.jpg" class="element__image" alt="Фотография в профиле">
-          <p class="element__name">Гора Эльбрус</p>
-          <div class="element__like"></div>
+          <div class="element__group">
+            <p class="element__name">Гора Эльбрус</p>
+            <div class="element__like"></div>
+          </div>
         </div>
         <div class="element">
           <img src="./images/element/Домбай.jpg" class="element__image" alt="Фотография в профиле">
-          <p class="element__name">Домбай</p>
-          <div class="element__like"></div>
+          <div class="element__group">
+            <p class="element__name">Домбай</p>
+            <div class="element__like"></div>
+          </div>
         </div>
         <div class="element">
           <img src="./images/element/Ельбрус.jpg" class="element__image" alt="Фотография в профиле">
-          <p class="element__name">Гора Эльбрус</p>
-          <div class="element__like"></div>
+          <div class="element__group">
+            <p class="element__name">Гора Эльбрус</p>
+            <div class="element__like"></div>
+          </div>
         </div>
         <div class="element">
           <img src="./images/element/Домбай.jpg" class="element__image" alt="Фотография в профиле">
-          <p class="element__name">Домбай</p>
-          <div class="element__like"></div>
+          <div class="element__group">
+            <p class="element__name">Домбай</p>
+            <div class="element__like"></div>
+          </div>
         </div>
         <div class="element">
-          <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image" alt="Фотография в профиле">
-          <p class="element__name">Карачаево-Черкесия</p>
-          <div class="element__like"></div>
+          <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image"
+            alt="Фотография в профиле">
+            <div class="element__group">
+              <p class="element__name">Карачаево-Черкесия</p>
+              <div class="element__like"></div>
+            </div>
         </div>
       </section>
     </main>
