--- a/index.html
+++ b/index.html
@@ -17,73 +17,73 @@
       <section class="profile">
         <img src="./images/profile/avatar.jpg" class="profile__avatar" alt="аватарка">
         <div class="profile__info">
-          <p class="profile__name">Жак-Ив Кусто</p>
-          <div class="profile__edit-button"></div>
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <button class="profile__edit-button" type="button"></button>
           <p class="profile__status">Исследователь океана</p>
         </div>
-        <div class="profile__add-button"></div>
-      </section>
-      <section class="form">
-        <div class="form__popup">
-          <div class="form__close"></div>
-          <p class="form__title">Редактировать профиль</p>
-          <form class="form__info">
-            <input type="text" name="name" value="Жак-Ив Кусто" class="form__name">
-            <input type="text" name="status" value="Исследователь океана" class="form__status">
-            <input type="submit" name="save" class="form__submit-button" value="Сохранить">
-          </form>
-        </div>
+        <button class="profile__add-button" type="button"></button>
       </section>
       <section class="elements">
         <div class="element">
           <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image"
             alt="Фотография в профиле">
           <div class="element__group">
-            <p class="element__name">Карачаевск</p>
-            <div class="element__like"></div>
+            <h2 class="element__name">Карачаевск</h2>
+            <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img src="./images/element/Ельбрус.jpg" class="element__image" alt="Фотография в профиле">
           <div class="element__group">
-            <p class="element__name">Гора Эльбрус</p>
-            <div class="element__like"></div>
+            <h2 class="element__name">Гора Эльбрус</h2>
+            <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img src="./images/element/Домбай.jpg" class="element__image" alt="Фотография в профиле">
           <div class="element__group">
-            <p class="element__name">Домбай</p>
-            <div class="element__like"></div>
+            <h2 class="element__name">Домбай</h2>
+            <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img src="./images/element/Ельбрус.jpg" class="element__image" alt="Фотография в профиле">
           <div class="element__group">
-            <p class="element__name">Гора Эльбрус</p>
-            <div class="element__like"></div>
+            <h2 class="element__name">Гора Эльбрус</h2>
+            <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img src="./images/element/Домбай.jpg" class="element__image" alt="Фотография в профиле">
           <div class="element__group">
-            <p class="element__name">Домбай</p>
-            <div class="element__like"></div>
+            <h2 class="element__name">Домбай</h2>
+            <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
           <img src="./images/element/kirill-pershin-1088404-unsplash.jpg" class="element__image"
             alt="Фотография в профиле">
-            <div class="element__group">
-              <p class="element__name">Карачаево-Черкесия</p>
-              <div class="element__like"></div>
-            </div>
+          <div class="element__group">
+            <h2 class="element__name">Карачаево-Черкесия</h2>
+            <button class="element__like"></button>
+          </div>
         </div>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__copy">&copy; 2020 Mesto Russia</p>
     </footer>
+    <section class="popup">
+      <div class="popup__container">
+        <button class="popup__close"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form class="popup__info" name="popup">
+          <input type="text" name="name" value="" class="popup__input popup__input-name">
+          <input type="text" name="status" value="" class="popup__input popup__input-status">
+          <button type="submit" name="save" class="popup__submit-button">Сохранить</button>
+        </form>
+      </div>
+    </section>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
