--- a/index.html
+++ b/index.html
@@ -29,35 +29,35 @@
             alt="Фотография в профиле">
           <div class="element__group">
             <h2 class="element__name">Карачаевск</h2>
-            <button class="element__like"></button>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
         <div class="element">
           <img src="./images/element/Ельбрус.jpg" class="element__image" alt="Фотография в профиле">
           <div class="element__group">
             <h2 class="element__name">Гора Эльбрус</h2>
-            <button class="element__like"></button>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
         <div class="element">
           <img src="./images/element/Домбай.jpg" class="element__image" alt="Фотография в профиле">
           <div class="element__group">
             <h2 class="element__name">Домбай</h2>
-            <button class="element__like"></button>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
         <div class="element">
           <img src="./images/element/Ельбрус.jpg" class="element__image" alt="Фотография в профиле">
           <div class="element__group">
             <h2 class="element__name">Гора Эльбрус</h2>
-            <button class="element__like"></button>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
         <div class="element">
           <img src="./images/element/Домбай.jpg" class="element__image" alt="Фотография в профиле">
           <div class="element__group">
             <h2 class="element__name">Домбай</h2>
-            <button class="element__like"></button>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
         <div class="element">
@@ -65,7 +65,7 @@
             alt="Фотография в профиле">
           <div class="element__group">
             <h2 class="element__name">Карачаево-Черкесия</h2>
-            <button class="element__like"></button>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
       </section>
@@ -75,11 +75,11 @@
     </footer>
     <section class="popup">
       <div class="popup__container">
-        <button class="popup__close"></button>
+        <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__info" name="popup">
-          <input type="text" name="name" value="" class="popup__input popup__input-name">
-          <input type="text" name="status" value="" class="popup__input popup__input-status">
+        <form class="popup__form" name="popup">
+          <input type="text" name="name" value="" class="popup__input popup__input_name">
+          <input type="text" name="status" value="" class="popup__input popup__input_status">
           <button type="submit" name="save" class="popup__submit-button">Сохранить</button>
         </form>
       </div>
