--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </form>
       </div>
     </section>
-    <section class="popup" id="popup__card">
+    <section class="popup" id="popup__add">
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
@@ -53,6 +53,13 @@
         </form>
       </div>
     </section>
+    <section class="popup-card">
+      <div class="popup-card__content">
+      <img src="" class="popup-card__image">
+      <p class="popup-card__caption"></p>
+      <button class="popup-card__close" type="button"></button>
+      </div>
+    </section>
   </div>
   <template id="element">
     <div class="element">
@@ -60,6 +67,7 @@
       <div class="element__group">
         <h2 class="element__name"></h2>
         <button class="element__like" type="button"></button>
+        <button class="element__trash" type="button"></button>
       </div>
     </div>
   </template>
