--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
     <section class="popup-card">
       <div class="popup-card__content">
-      <img src="" class="popup-card__image">
+      <img src="#" class="popup-card__image">
       <p class="popup-card__caption"></p>
       <button class="popup-card__close" type="button"></button>
       </div>
@@ -63,7 +63,7 @@
   </div>
   <template id="element">
     <div class="element">
-      <img src="" class="element__image" alt="Фотография в профиле">
+      <img src="#" class="element__image" alt="Фотография в профиле">
       <div class="element__group">
         <h2 class="element__name"></h2>
         <button class="element__like" type="button"></button>
