--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div>
   <template id="element">
     <div class="element">
-      <img src="#" class="element__image" alt="Фотография в профиле">
+      <img src="#" class="element__image" alt="#">
       <div class="element__group">
         <h2 class="element__name"></h2>
         <button class="element__like" type="button"></button>
@@ -71,6 +71,7 @@
       </div>
     </div>
   </template>
+  <script src="./scripts/cards.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 
