сделал закрытие попапа кликом на оверлей и назатием на esc

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <button type="submit" name="save" class="popup__submit-button">Сохранить</button>
         </form>
       </div>
+      <div class="popup__overlay"></div>
     </section>
     <section class="popup" id="popup__add">
       <div class="popup__container">
@@ -58,6 +59,7 @@
           <button type="submit" name="add" class="popup__submit-button">Создать</button>
         </form>
       </div>
+      <div class="popup__overlay"></div>
     </section>
     <section class="popup-card">
       <div class="popup-card__content">
@@ -65,6 +67,7 @@
         <p class="popup-card__caption"></p>
         <button class="popup-card__close" type="button"></button>
       </div>
+      <div class="popup-card__overlay"></div>
     </section>
   </div>
   <template id="element">
