--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="popup" novalidate>
-          <input id="name-input" type="text" name="name" value="" class="popup__input popup__input_name" minlength="2"
+          <input id="name-input" type="text" name="name" class="popup__input popup__input_name" minlength="2"
             maxlength="40" required>
           <span class="name-input-error popup__name-input-error"></span>
-          <input id="status-input" type="text" name="status" value="" class="popup__input popup__input_status"
+          <input id="status-input" type="text" name="status" class="popup__input popup__input_status"
             minlength="2" maxlength="200" required>
           <span class="status-input-error popup__status-input-error"></span>
           <button type="submit" name="save" class="popup__submit-button">Сохранить</button>
@@ -80,9 +80,9 @@
       </div>
     </div>
   </template>
-  <script src="./scripts/cards.js"></script>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validation.js"></script>
+  <script defer src="./scripts/cards.js"></script>
+  <script defer src="./scripts/index.js"></script>
+  <script defer src="./scripts/validation.js"></script>
 </body>
 
 </html>
