Исправил ошибки с вложенностью классов

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       </div>
     </section>
     <section class="popup" id="popup-card">
-      <div class="popup-card__content">
-        <img src="#" class="popup-card__image">
-        <p class="popup-card__caption"></p>
+      <div class="popup__content-card">
+        <img src="#" class="popup__image-card">
+        <p class="popup__caption-card"></p>
         <button class="popup__close" type="button"></button>
       </div>
     </section>
