--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       </div>
     </div>
   </template>
-  <script defer src="./scripts/cards.js"></script>
-  <script defer src="./scripts/index.js"></script>
-  <script defer src="./scripts/validation.js"></script>
+  <script defer type="module" src="./scripts/cards.js"></script>
+  <script defer type="module" src="./scripts/index.js"></script>
+  <script defer type="module" src="./scripts/validation.js"></script>
 </body>
 
 </html>
