Настроил сборку вебпаком

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 
@@ -15,7 +14,7 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img src="./images/profile/avatar.jpg" class="profile__avatar" alt="аватарка">
+        <img src="<%=require('./images/profile/avatar.jpg')%>" class="profile__avatar" alt="аватарка">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
