--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 
@@ -76,7 +77,7 @@
       </div>
     </div>
   </template>
-  <script defer type="module" src="./scripts/index.js"></script>
+  <script defer type="module" src="./pages/index.js"></script>
 </body>
 
 </html>
