--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,15 @@
         </form>
       </div>
     </section>
+    <section class="popup" id="popup__del">
+      <div class="popup__container">
+        <button class="popup__close" type="button"></button>
+        <h2 class="popup__title">Вы уверены?</h2>
+        <form class="popup__form" name="popup">
+          <button type="submit" name="add" class="popup__submit-button">Да</button>
+        </form>
+      </div>
+    </section>
     <section class="popup" id="popup-card">
       <div class="popup__content-card">
         <img src="#" class="popup__image-card">
