--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 
@@ -16,7 +15,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__overlay">
-          <img src="./images/profile/avatar.jpg" class="profile__avatar" alt="аватарка">
+          <img src=<%=require("./images/profile/avatar.jpg")%> class="profile__avatar" alt="аватарка">
           <div class="profile__avatar-edit"></div>
         </div>
         <div class="profile__info">
@@ -102,7 +101,6 @@
       </div>
     </div>
   </template>
-  <script defer type="module" src="./pages/index.js"></script>
 </body>
 
 </html>
