--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="popup" novalidate>
+        <form class="popup__form" name="profile-popup" novalidate>
           <input id="name-input" type="text" name="name" class="popup__input popup__input_name" minlength="2"
             maxlength="40" required>
           <span class="name-input-error popup__name-input-error"></span>
@@ -50,7 +50,7 @@
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" name="popup">
+        <form class="popup__form" name="add-card-popup">
           <input id="card-name-input" type="text" name="card-name" placeholder="Название" value=""
             class="popup__input popup__input_card-name" minlength="2" maxlength="30" required>
           <span class="card-name-input-error popup__card-name-input-error"></span>
@@ -81,7 +81,7 @@
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Обновить аватар</h2>
-        <form class="popup__form" name="popup">
+        <form class="popup__form" name="avatar-popup">
           <input id="avatar-src-input" type="url" name="avatar-src" placeholder="Ссылка на картинку" value=""
             class="popup__input popup__input_avatar-src" required>
           <span class="avatar-src-input-error popup__avatar-src-input-error"></span>
